# SP_Y2S2M2

./: Demo  Demo.cpp  Test.cpp
Demo.dSYM/Contents/Resources/DWARF/: Demo
SP_Y2S2M2/: CMakeLists.txt  my_tst.h
SP_Y2S2M2/CardWar_a-main/sources/: card.hpp  game.cpp  game.hpp
SP_Y2S2M2/sources/: card.cpp  player.cpp  player.hpp
sources/: card.cpp  card.hpp  game.cpp  game.hpp  player.cpp  player.hpp
