cmake_minimum_required(VERSION 3.24)
project(SP_Y2S2M2_NEW)

set(CMAKE_CXX_STANDARD 17)

add_executable(SP_Y2S2M2_NEW main.cpp CardWar_a-main/Demo.cpp CardWar_a-main/sources/player.cpp CardWar_a-main/sources/game.cpp CardWar_a-main/sources/card.hpp ../../../../../../../Demo.cpp sources/card.cpp sources/card.cpp CardWar_a-main/sources/card.cpp CardWar_a-main/sources/card.cpp)
